src/main/java/com/example/timelist/Error/LectureRoomException.java
package com.example.timelist.Error;

public class LectureRoomException extends RuntimeException{
}
